2009-04-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* EditLaneFile.aspx.cs: Add some simple change tracking to
	  steps.

2009-03-31  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* EditLane.aspx.cs: First attempt of implementing deletion of
	  a command from a lane.

2009-03-31  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* index2.aspx:
	* index.aspx.cs:
	* ViewTable.aspx:
	* index2.aspx.cs:
	* ViewLane.aspx.cs:
	* ViewTable.aspx.cs:
	* ViewWorkTable.aspx.cs:
	* ViewRevisions.aspx.cs: Remove index2.aspx[.cs] and
	  ViewTable.aspx[.cs], they're stale. Update links to the
	  correct pages (index.aspx and ViewTable2.aspx).

2009-03-31  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ViewWorkTable.aspx.cs: Show the html report and the correct
	  duration. Fixes #490454.

2009-03-31  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* EditLane.js:
	* EditLane.aspx.cs: Added support for per-command timeout
	  instead of having a 60-minute timeout for all commands.

2009-03-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ViewHtmlReport.aspx.cs: Fix c&p error.

2009-03-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ViewHtmlReport.aspx.cs: Augment ViewHtmlReport to fix both
	  images and links.

	* ViewLane.aspx.cs: Comment out cwl.

	* ReportCommit.aspx.cs: Add some checks here.

2009-03-03  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ChangeLog: Added.

	* ViewWorkTable.aspx.cs: Fix this page.
